Use styled markup for displaying reports

--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -15,20 +15,31 @@
   Andrew Dai, and any contributors to that project not listed here.
 -->
 
-<!doctype html>
-<html>
-<head>
-<title>
-  Oversight.io | Celebrating the US government's oversight community.
-</title>
-<style>
-  .warning {border: 1px solid #990000; background-color: #eeeeee; padding: 20px; font-size: 125%;}
-</style>
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-<div class="warning">
-  You've come upon a hideous work-in-progress by <a href="https://twitter.com/konklone">@konklone</a>. Do not judge: help <a href="https://github.com/unitedstates/inspectors-general">here</a> or <a href="https://github.com/konklone/oversight">there</a>.
-</div>
+    <title>Oversight.io | Celebrating the US government's oversight community.</title>
 
-<h1>Oversight.io</h1>
+    <link href="/css/main.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600' rel='stylesheet' type='text/css' />
+
+  </head>
+
+  <body>
+
+    <header class="content-block banner">
+      <div class="container">
+        <h1 class="text-center">
+          <a href="./">oversight.io</a>
+        </h1>
+        <hr class="visible-xs">
+        <h4 class="text-center">Bringing into sight &hellip; &lt;tagline&gt;</h4>
+      </div>
+    </header>
