--- a/views/layout/footer.html
+++ b/views/layout/footer.html
@@ -1,15 +1,29 @@
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <footer class="content-block credit">
+      <div class="container">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 text-center">
+          <p class="lead">
+            oversight.io is a project from <a href="http://theunitedstates.io/">&#64;unitedstates</a>: A shared commons of data and tools for the United States. Made by the public, used by the public.
+          </p>
+          <p class="lead">
+            Contributions are welcome at the <a href="https://github.com/unitedstates/inspectors-general">project's homepage</a>, or <a href="https://github.com/unitedstates/inspectors-general/issues">report any issues</a> you find.
+          </p>
+        </div>
+      </div>
+    </footer>
 
-  ga('create', 'UA-252618-18', 'oversight.io');
-  ga('send', 'pageview');
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  // Anonymize user IPs (cut off the last triplet). Privacy first.
-  ga('set', 'anonymizeIp', true);
-</script>
+    ga('create', 'UA-252618-18', 'oversight.io');
+    ga('send', 'pageview');
 
-</body>
+    // Anonymize user IPs (cut off the last triplet). Privacy first.
+    ga('set', 'anonymizeIp', true);
+  </script>
+  </body>
 </html>
