--- a/views/index.html
+++ b/views/index.html
@@ -1,78 +1,202 @@
 <% include layout/header.html %>
 
-<section class="search">
-  <form action="/" method="get">
-  <input type="text" name="query" placeholder="Search oversight reports..." />
-  <input type="submit" value="Go" />
-  </form>
+<section class="content-block search-reports">
+  <div class="container">
+    <h2 class="text-center">Search a collection of reports from the offices of Inspectors General across the federal government.</h2>
+    <form action="results" method="GET">
+      <br>
+      <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 input-group input-group-lg">
+        <input type="text" class="form-control input-lg" name="query" placeholder="e.g. waste, fraud, abuse" required>
+        <span class="input-group-btn">
+          <button type="submit" class="btn btn-lg btn-info" type="button">Go!!!</button>
+        </span>
+      </div>
+    </form>
+  </div>
 </section>
 
-<br/>
+<section class="content-block newsletter">
+  <div class="overlay"></div>
+  <div class="content">
+    <div class="container">
+      <form action="https://tinyletter.com/oversight" method="POST">
+        <h1>Or I could just read them for you &hellip;</h1>
+        <br>
+        <p>
+          Sign up for a biweekly newsletter summarizing the most interesting work of the US government's oversight community.
+        </p>
+        <br>
+        <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 input-group">
+          <input type="email" class="form-control" id="email" name="email" placeholder="your.name@email.com" required>
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-info" type="button">Yeah, Okay</button>
+          </span>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
 
-<section class="results">
-  <% if (results) { %>
+<section class="content-block agency-links">
+  <div class="container">
 
-    <% if (query) { %>
-      <strong>Results for "<%= query %>".</strong>
-    <% } %>
-    (found <%= results.hits.total %> results in <%= results.took %>ms)
+  <h2 class="col-xs-12 content-heading">Browse Reports by Agency</h2>
 
-    <% hits = results.hits.hits %>
-    <% if (hits.length > 0) { %>
-      <ul>
-        <% for (var i=0; i<hits.length; i++) { %>
-          <% report = hits[i]._source %>
-          <% highlight = hits[i].highlight %>
-          <li>
-            <h2>
-              <a href="/report/<%= report.inspector %>/<%= report.report_id %>">
-                <%= report.title %>
-              </a>
-            </h2>
-            <h4>
-              <a href="<%= report.inspector_url %>">
-                <%= report.agency_name %></a>
-              &mdash;
-              <%= report.published_on %>
-            </h4>
-            <p>
-              <% if (highlight && highlight.text) { %>
-                <%- helpers.truncate(highlight.text[0], 500) %>
-              <% } else if (highlight && highlight.summary) { %>
-                <%- helpers.truncate(highlight.summary[0], 500) %>
-              <% } else { %>
-                No excerpt available.
-              <% } %>
-            </p>
-            <div class="links">
-              <% if (report.url) { %>
-                <a href="<%= report.url %>">Full Report</a>
-                <% if (report.file_type == "pdf") { %>
-                  (PDF)
-                <% } %>
-              <% } else if (report.unreleased) { %>
-                <% if (report.missing) { %>
-                  Unreleased/Missing
-                <% } else { %>
-                  Unreleased
-                <% } %>
-              <% } %>
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Amtrak</h4>
+      </div>
+    </a>
 
-              <% if (report.landing_url) { %>
-                <a href="<%= report.landing_url %>">Summary</a>
-              <% } %>
-            </div>
-          </li>
-        <% } %>
-      </ul>
-    <% } else { %>
-      <p>
-        No results right now.
-      </p>
-    <% } %>
-  <% } else { %>
-    Error performing the search!
-  <% } %>
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Department of Homeland Security</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Department of Defense</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Department of Justice</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Department of Transportation</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+      <h4 class="text-center">Department of Energy</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Environmental Protection Agency</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Department of Housing and Urban Development</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">General Services Administration</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Office of Personnel Management</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Securities and Exchange Commission</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">Department of State</h4>
+      </div>
+    </a>
+
+    <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <h4 class="text-center">US Postal Service</h4>
+      </div>
+    </a>
+
+
+  </div>
+</section>
+
+
+<section class="content-block latest-reports">
+  <div class="container">
+
+  <h2 class="col-xs-12 content-heading">Read some of the most recent reports</h2>
+
+  <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+    <div class="card">
+      <h4>Grievance Payout Costs in the South Florida District</h4>
+      <hr>
+      <div class="row">
+        <p class="col-xs-3 col-xs-offset-1 text-left ">6-11-2014</p>
+        <p class="col-xs-7 text-right">United States Postal Service</p>
+      </div>
+    </div>
+  </a>
+
+  <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+    <div class="card">
+      <h4>Topeka, KS, Material Distribution Center – Information Technology General Controls</h4>
+      <hr>
+      <div class="row">
+        <p class="col-xs-3 col-xs-offset-1 text-left ">6-11-2014</p>
+        <p class="col-xs-7 text-right">United States Postal Service</p>
+      </div>
+    </div>
+  </a>
+
+  <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+    <div class="card">
+      <h4>Advertising and Consulting Supplier Selection Process</h4>
+      <hr>
+      <div class="row">
+        <p class="col-xs-3 col-xs-offset-1 text-left ">6-11-2014</p>
+        <p class="col-xs-7 text-right">United States Postal Service</p>
+      </div>
+    </div>
+  </a>
+
+  <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+    <div class="card">
+      <h4>Assessment of DoD Processes in Support of Committee on Foreign Investment in the United States Determinations and Foreign Ownership, Control, or Influence Mitigation.</h4>
+      <hr>
+      <div class="row">
+        <p class="col-xs-3 col-xs-offset-1 text-left ">6-10-2014</p>
+        <p class="col-xs-7 text-right">Department of Defense</p>
+      </div>
+    </div>
+  </a>
+
+  <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+    <div class="card">
+      <h4>Process Inefficiencies and Costs Discourage Participation in FRA’s RRIF Program</h4>
+      <hr>
+      <div class="row">
+        <p class="col-xs-3 col-xs-offset-1 text-left ">6-10-2014</p>
+        <p class="col-xs-7 text-right">Department of Transportation</p>
+      </div>
+    </div>
+  </a>
+
+  <a href="#" class="col-xs-12 col-sm-6 col-md-4">
+    <div class="card">
+      <h4>Audit Initiated of DOT’s Contract Close-Out Process</h4>
+      <hr>
+      <div class="row">
+        <p class="col-xs-3 col-xs-offset-1 text-left ">6-10-2014</p>
+        <p class="col-xs-7 text-right">Department of Transportation</p>
+      </div>
+    </div>
+  </a>
+
+  </div>
 </section>
 
 <% include layout/footer.html %>
