Fix banner link to homepage

--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -37,7 +37,7 @@
     <header class="content-block banner">
       <div class="container">
         <h1 class="text-center">
-          <a href="./">oversight.io</a>
+          <a href="/">oversight.io</a>
         </h1>
         <hr class="visible-xs">
         <h4 class="text-center">Bringing into sight &hellip; &lt;tagline&gt;</h4>
