--- a/views/results.html
+++ b/views/results.html
@@ -17,7 +17,7 @@
 
     <p class="col-xs-6"><%= results.hits.total %> Results <strong><%= query %></strong></p>
     <p class="col-xs-6 text-right">
-      <a href="/results/<%= query %>/rss">Subscribe to this search</a>
+      <a href="/results/<%= encodeURIComponent(query) %>/rss">Subscribe to this search</a>
     </p>
 
     <% if (results) { %>
