--- a/views/results.html
+++ b/views/results.html
@@ -1,7 +1,7 @@
 <% include layout/header.html %>
 
 
-<form action="results" method="GET">
+<form action="/results" method="GET">
   <br>
   <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 input-group input-group-lg">
     <input type="text" class="form-control input-lg" name="query" value="<%= query %>">
