Add per-agency list of reports
Recycling results.html  is pretty lazy and should be redone though

--- a/less/main.less
+++ b/less/main.less
@@ -84,6 +84,11 @@ a {
   }
 }
 
+.title {
+  margin-top: 1.2em;
+  margin-bottom: 1.2em;
+}
+
 .search-reports {
   background: #fcfcfc;
   padding: 4em 0 7em;
