--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2524,6 +2524,10 @@ a:focus {
     font-size: 6em;
   }
 }
+.title {
+  margin-top: 1.2em;
+  margin-bottom: 1.2em;
+}
 .search-reports {
   background: #fcfcfc;
   padding: 4em 0 7em;
