--- a/views/results.html
+++ b/views/results.html
@@ -1,24 +1,30 @@
 <% include layout/header.html %>
 
 
+<% if (typeof(query) !== "undefined") { %>
 <form action="/results" method="GET">
-  <br>
-  <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 input-group input-group-lg">
+  <div class="title col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 input-group input-group-lg">
     <input type="text" class="form-control input-lg" name="query" value="<%= query %>">
     <span class="input-group-btn">
       <button type="submit" class="btn btn-lg btn-info" type="button">Searcg Again</button>
     </span>
   </div>
 </form>
-
+<% }else if(typeof(agency) !== "undefined") { %>
+  <h1 class="title col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
+    <%= agencies[agency] %> Reports
+  </h1>
+<% } %>
 
 <section class="content-block search-results">
   <div class="container">
 
+<% if (typeof(query) !== "undefined") { %>
     <p class="col-xs-6"><%= results.hits.total %> Results <strong><%= query %></strong></p>
     <p class="col-xs-6 text-right">
       <a href="/results/<%= encodeURIComponent(query) %>/rss">Subscribe to this search</a>
     </p>
+<% } %>
 
     <% if (results) { %>
     <% hits = results.hits.hits %>
