Add a proper tagline

--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -39,7 +39,6 @@
         <h1 class="text-center">
           <a href="/">oversight.io</a>
         </h1>
-        <hr class="visible-xs">
-        <h4 class="text-center">Bringing into sight &hellip; &lt;tagline&gt;</h4>
+        <h4 class="text-center">Bringing into sight the US government's oversight community.</h4>
       </div>
     </header>
