--- a/less/main.less
+++ b/less/main.less
@@ -145,7 +145,7 @@ a {
 .card {
   background: white;
   color: #222222;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   padding: 0.4em;
   box-shadow: 0 2px 4px rgba(100, 100, 100, 0.5);
   h4 {
@@ -168,6 +168,12 @@ a:active {
     background: #3D2585;
     color: #ffffff;
     padding: 0.6em 0;
+    display: table;
+    width: 100%;
+    h4 {
+      display: table-cell;
+      vertical-align: middle;
+    }
   }
 }
 
